Add Moder2 for better performance in UI
