# routes/api.php
@@ -5,6 +5,8 @@ use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 use App\Http\Controllers\AuthController;
 use App\Http\Controllers\QuoteController;
+use App\Http\Controllers\Quote2Controller;
+
 
 
 /*
@@ -25,12 +27,16 @@ Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
 
 Route::get('/CheckDatabase', [CheckDatabaseController::class, 'index']);
 
-Route::post('/register', [AuthController::class, 'register']) ;
+Route::post('/register', [AuthController::class, 'register']);
 
-Route::post('/login', [AuthController::class, 'login']) ;
+Route::post('/login', [AuthController::class, 'login']);
+
 
 
 
 Route::middleware('auth:sanctum')->group(function () {
   Route::get('/quotes', [QuoteController::class, 'getAndSaveQuotes']);
+
+  Route::get('/quote', [Quote2Controller::class, 'getAndSave1Quote']);
+  Route::get('/otherquotes', [Quote2Controller::class, 'get4Quote']);
 });
